test_regress/t/t_alias_cyclic_bad.out
%Error: t/t_alias_cyclic_bad.v:18:13: Alias is specified more than once (IEEE 1800-2023 10.11): 'a'
                                    : ... note: In instance 't'
   18 |   alias a = a;
      |             ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_alias_cyclic_bad.v:19:9: Alias is specified more than once (IEEE 1800-2023 10.11): 'a'
                                   : ... note: In instance 't'
   19 |   alias a = b;
      |         ^
%Error: t/t_alias_cyclic_bad.v:20:9: Alias is specified more than once (IEEE 1800-2023 10.11): 'b'
                                   : ... note: In instance 't'
   20 |   alias b = a;
      |         ^
%Error: t/t_alias_cyclic_bad.v:20:13: Alias is specified more than once (IEEE 1800-2023 10.11): 'a'
                                    : ... note: In instance 't'
   20 |   alias b = a;
      |             ^
%Error: Exiting due to
